# dual_sense_motion

./: .gitignore  CMakeLists.txt  JoyButtons.md  README.md  package.xml
launch/: dual_sense_acc.launch  dual_sense_default.launch  dual_sense_for_moveit.launch  dual_sense_pose.launch
rviz/: dual_sense_motion.rviz
scripts/: imu_sub.py  joy_sub.py
src/: dual_sense_motion.cpp  imu_joy_subscriber.cpp  simple_sub_imu.cpp  test_args.cpp
